# healthie

./: .git-blame-ignore-revs  .gitignore  .typos.toml  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Justfile  README.md  deep_analysis.py  dprint.jsonc  heqfejgja4mvh5rfmmi8nafpdc3rnfin.darc  main.py  manifest  mdkuheqjbtr2acfqeva9heclr0bhedmn  process_health.py  pyproject.toml  rustfmt.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: ci-before-push.sh
.github/workflows/: ci.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-personal-domain-pattern-rebuild.md  0003-typed-domain.md  0004-claims-registry.md  README.md
docs/superpowers/plans/: 2026-07-16-m1a-healthie-shared.md
docs/superpowers/specs/: 2026-07-16-healthie-vision-reset-design.md
healthie-mcp/: Cargo.toml
healthie-mcp/src/: auth.rs  config.rs  handler.rs  lib.rs  main.rs  schemas.rs
healthie-mcp/src/prompts/: baseline_intake.rs  checkin.rs  mod.rs
healthie-mcp/tests/: mcp_integration_test.rs
healthie-shared/: Cargo.toml
healthie-shared/src/: clock.rs  error.rs  lib.rs  test_support.rs
healthie-shared/src/entities/: checkin.rs  checkin_response.rs  claim.rs  concern.rs  concern_tag.rs  goal.rs  mcp_token.rs  mod.rs  observation.rs  plan.rs  plan_item.rs  plan_item_outcome.rs  profile.rs  protocol.rs
healthie-shared/src/inputs/: claim.rs  concern.rs  goal.rs  mod.rs  observation.rs  plan.rs  profile.rs  protocol.rs
healthie-shared/src/migration/: m20260716_000001_initial_schema.rs  m20260717_000002_mcp_token.rs  m20260718_000003_claims.rs  mod.rs
healthie-shared/src/services/: briefing.rs  checkin.rs  claim.rs  concern.rs  goal.rs  mcp_token.rs  mod.rs  observation.rs  plan.rs  profile.rs  protocol.rs
