[workspace]
resolver = "3"
members = ["healthie-shared"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
# `std` enables password-hash/std -> rand_core/std -> getrandom, which gates
# `OsRng` (used for CSPRNG token bytes + salt). Keeps rand off the dep list.
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
