[package]
name = "healthie-shared"
edition.workspace = true
version.workspace = true

[lib]
name = "healthie_shared"

[features]
test-support = []
schemars = ["dep:schemars"]

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
argon2.workspace = true
base64.workspace = true
schemars = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
